# ParseMate

./: README.md  pyproject.toml
parsemate/: __main__.py  utils.py
parsemate/parser/: __init__.py  fastapi.py
