[tool.poetry]
name = "parsemate"
version = "0.1.0"
description = "A dependency for the Documate project, designed for parsing and extracting metadata for defined routes."
authors = ["blackmamoth <blackmamoth83@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
